# svoyak

./: .gitignore  Cargo.toml
src/: db.rs  main.rs  schema.sql
src/tg/: bot.rs  mod.rs
src/web/: data_form.rs  edit.rs  game.rs  handlers.rs  mod.rs  rec_question.rs  server.rs  transfer.rs  users.rs
static/css/: edit_pac.css  game.css  loggedin.css  style.css  style_prepare_game.css  style_questions.css  style_questions_done.css  style_questions_pac.css
static/js/: connection_script.js  edit_question.js  login.js  prepare_question.js  prepare_question_pac.js  prepare_question_pac_context.js  prepare_question_topic.js  script.js
templates/: 404.html.tera  add_question_topic.html.tera  admin.html.tera  announce_game.html.tera  changing_round.html.tera  edit_pac.html.tera  edit_questions.html.tera  game.html.tera  index.html.tera  loggedin.html.tera  login.html.tera  players_list.html.tera  prepare_game.html.tera  prepare_questions.html.tera  prepare_questions_context.html.tera  prepare_questions_pac.html.tera  prepare_questions_pac_context.html.tera  prepare_questions_topic.html.tera  prepare_questions_topic_context.html.tera  questions_pac_done.html.tera  questions_pac_done_transfer.html.tera  questions_players.html.tera  regdone.html.tera  result_game.html.tera  result_tour.html.tera  schema_questions_pac.html.tera  signup.html.tera  superadmin.html.tera  transfer_questions_pac.html.tera  usernotdb.html.tera  visitor.html.tera
