[package]
name = "svoyak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.4", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "=0.1.0-rc.4", features = ["tera"] }
serde = "1.0.188"
serde_derive = "1.0.188"
rusqlite = { version = "0.30.0", features = ["bundled"] }
dotenv = "0.15.0"
rand = "0.8.5"
time = "0.3.28"
bcrypt = "0.15.0"
csrf = "0.4.1"
data-encoding = "2.4.0"
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.1"
chrono = "0.4.27"
lazy_static = "1.4.0"
flexi_logger = "0.27.4"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]

[dev-dependencies]
rand = "0.8.0"